Remove slop comments and add fix violation comments